force-app/main/default/objects/Deal_Registration__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who approved the deal registration.</description>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approved_Deal_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>