force-app/main/default/objects/Deal_Registration__c/fields/Approved_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Close_Date__c</fullName>
    <description>The primary Opportunity's CloseDate snapshotted once at
  FINALISE_APPROVAL, for Material Change Policy drift detection. See
  Approved_Revenue__c.</description>
    <label>Approved Close Date</label>
    <type>Date</type>
</CustomField>