force-app/main/default/objects/Deal_Registration__c/fields/Approved_Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Approved_Customer_Account__c</fullName>
    <description>The primary Opportunity's AccountId snapshotted once at
  FINALISE_APPROVAL, for Material Change Policy drift detection. See
  Approved_Revenue__c.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved Customer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Approved_Deal_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>