force-app/main/default/objects/Deal_Registration__c/fields/Approved_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Approved_Opportunity__c</fullName>
    <description
  >The deal's primary Deal_Opportunity__c's Opportunity, snapshotted once
  at FINALISE_APPROVAL. Distinct from Opportunity__c (the live projection
  of the current primary relationship) - this one never changes after
  approval, so a later re-link/replace can be detected as a Material
  Change. See Approved_Revenue__c.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Approved_Deal_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>