force-app/main/default/objects/Deal_Registration__c/fields/Approved_Owner__c.field-meta.xml
<CustomField>
    <fullName>Approved_Owner__c</fullName>
    <description>The primary Opportunity's OwnerId snapshotted once at
  FINALISE_APPROVAL, for Material Change Policy drift detection. See
  Approved_Revenue__c.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approved_Deal_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>