force-app/main/default/objects/Deal_Registration__c/fields/Approved_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Approved_Revenue__c</fullName>
    <description
  >Estimated_Revenue__c snapshotted once at FINALISE_APPROVAL, so later
  Opportunity-side amount drift can be measured against what was actually
  approved rather than a live, possibly-changed value. Captured by
  DealCommandService.captureApprovalSnapshot; never mutated elsewhere.</description>
    <label>Approved Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>