force-app/main/default/objects/Deal_Registration__c/fields/Auto_Number_Format__c.field-meta.xml
<CustomField>
    <fullName>Auto_Number_Format__c</fullName>
    <label>Auto Number Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>