force-app/main/default/objects/Deal_Registration__c/fields/Conflict_Resolution_Notes__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Resolution_Notes__c</fullName>
    <label>Conflict Resolution Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>