force-app/main/default/objects/Deal_Registration__c/fields/Conflict_Status__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Status__c</fullName>
    <description
  >Conflict review state for duplicate or competing deal registrations.</description>
    <label>Conflict Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Potential Conflict</fullName>
            </value>
            <value>
                <fullName>Confirmed Conflict</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>