force-app/main/default/objects/Deal_Registration__c/fields/CoSell_Status__c.field-meta.xml
<CustomField>
    <fullName>CoSell_Status__c</fullName>
    <description
  >Projection from the deal's Deal_Participant__c roster, maintained
  by DealCoSellStatusProjectionService - not directly editable. Trimmed to
  the 3 values reachable today (Not Applicable/Inviting/Active); Completed
  and Cancelled need a deal-closure/cancellation hook that doesn't exist
  until Sprint 39, so they aren't shipped as unreachable picklist values.
  See docs/deal-participant-management-review.md.</description>
    <label>Co-Sell Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>Inviting</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>