force-app/main/default/objects/Deal_Registration__c/fields/Current_Action_Owner__c.field-meta.xml
<CustomField>
    <fullName>Current_Action_Owner__c</fullName><label
  >Current Action Owner</label><type>Lookup</type><referenceTo
  >User</referenceTo><relationshipLabel
  >Deal Lifecycle Actions</relationshipLabel><relationshipName
  >Deal_Lifecycle_Actions</relationshipName><required>false</required>
</CustomField>