force-app/main/default/objects/Deal_Registration__c/fields/Current_Action_Required__c.field-meta.xml
<CustomField>
    <fullName>Current_Action_Required__c</fullName><label
  >Current Action Required</label><type>Text</type><length>100</length><required
  >false</required>
</CustomField>