force-app/main/default/objects/Deal_Registration__c/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Customer account associated with the registered deal.</description>
    <label>Customer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Customer_Deal_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>