force-app/main/default/objects/Deal_Registration__c/fields/Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email__c</fullName>
    <description
  >Primary customer email address for the registered deal.</description>
    <label>Customer Email</label>
    <type>Email</type>
</CustomField>