force-app/main/default/objects/Deal_Registration__c/fields/Customer_Identity_Fingerprint__c.field-meta.xml
<CustomField><fullName
  >Customer_Identity_Fingerprint__c</fullName><label
  >Customer Identity Fingerprint</label><type>Text</type><length
  >64</length><required>false</required></CustomField>