force-app/main/default/objects/Deal_Registration__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description
  >Name of the customer or prospect for the registered deal.</description>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>