force-app/main/default/objects/Deal_Registration__c/fields/Estimated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Amount__c</fullName>
    <label>Estimated Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>