force-app/main/default/objects/Deal_Registration__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description
  >Date when the deal registration expires if not converted or renewed.</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>