force-app/main/default/objects/Deal_Registration__c/fields/Identity_Country__c.field-meta.xml
<CustomField><fullName
  >Identity_Country__c</fullName><label>Identity Country</label><type
  >Text</type><length>80</length><required>false</required></CustomField>