force-app/main/default/objects/Deal_Registration__c/fields/Identity_Schema_Version__c.field-meta.xml
<CustomField><fullName
  >Identity_Schema_Version__c</fullName><label
  >Identity Schema Version</label><type>Text</type><length>20</length><required
  >false</required></CustomField>