force-app/main/default/objects/Deal_Registration__c/fields/Implementation_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Timeline__c</fullName>
    <label>Implementation Timeline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>