force-app/main/default/objects/Deal_Registration__c/fields/Last_Lifecycle_Change__c.field-meta.xml
<CustomField>
    <fullName>Last_Lifecycle_Change__c</fullName><label
  >Last Lifecycle Change</label><type>DateTime</type><required>false</required>
</CustomField>