force-app/main/default/objects/Deal_Registration__c/fields/Last_Lifecycle_Event__c.field-meta.xml
<CustomField>
    <fullName>Last_Lifecycle_Event__c</fullName><label
  >Last Lifecycle Event</label><type>Text</type><length>100</length><required
  >false</required>
</CustomField>