force-app/main/default/objects/Deal_Registration__c/fields/Lifecycle_Health__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_Health__c</fullName><label>Lifecycle Health</label><type
  >Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Healthy</fullName><default>true</default><label
        >Healthy</label></value>
        <value><fullName>At Risk</fullName><default>false</default><label
        >At Risk</label></value>
        <value><fullName>Blocked</fullName><default>false</default><label
        >Blocked</label></value>
        <value><fullName>Overdue</fullName><default>false</default><label
        >Overdue</label></value>
        <value><fullName>Completed</fullName><default>false</default><label
        >Completed</label></value>
    </valueSetDefinition></valueSet>
</CustomField>