force-app/main/default/objects/Deal_Registration__c/fields/Lifecycle_Lock_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_Lock_Reason__c</fullName><label
  >Lifecycle Lock Reason</label><type>LongTextArea</type><length
  >32768</length><visibleLines>3</visibleLines>
</CustomField>