force-app/main/default/objects/Deal_Registration__c/fields/Lifecycle_Locked__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_Locked__c</fullName><label>Lifecycle Locked</label><type
  >Checkbox</type><defaultValue>false</defaultValue>
</CustomField>