force-app/main/default/objects/Deal_Registration__c/fields/Lifecycle_Phase__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_Phase__c</fullName>
    <label>Lifecycle Phase</label>
    <description
  >Trimmed to the 3 values actually produced (InitializeDealLifecycleCommandHandler sets Registration; ImplementationCommandService.advanceLifecyclePhase sets Implementation/Customer Success). "Protection" and "Sales Execution" were never removed as dead per se - those modules exist (Deal_Protection_Grant__c, DealOpportunityReconciliationBatch) but never advance this field - see project memory for that open follow-up decision. "Discovery"/"Review"/"Renewal"/"Completed"/"Archived" correspond to phases with no built module yet.</description>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Registration</fullName>
                <default>true</default>
                <label>Registration</label>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Customer Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>