force-app/main/default/objects/Deal_Registration__c/fields/Masked_Registration_Id__c.field-meta.xml
<CustomField><fullName
  >Masked_Registration_Id__c</fullName><label
  >Masked Registration Id</label><type>Text</type><length>40</length><required
  >false</required></CustomField>