force-app/main/default/objects/Deal_Registration__c/fields/Name_Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Name_Field_Type__c</fullName>
    <label>Name Field Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>