force-app/main/default/objects/Deal_Registration__c/fields/Next_Action_Due__c.field-meta.xml
<CustomField>
    <fullName>Next_Action_Due__c</fullName><label>Next Action Due</label><type
  >DateTime</type><required>false</required>
</CustomField>