force-app/main/default/objects/Deal_Registration__c/fields/Normalized_Address__c.field-meta.xml
<CustomField><fullName
  >Normalized_Address__c</fullName><label>Normalized Address</label><type
  >Text</type><length>255</length><required>false</required></CustomField>