force-app/main/default/objects/Deal_Registration__c/fields/Normalized_Customer_Name__c.field-meta.xml
<CustomField><fullName
  >Normalized_Customer_Name__c</fullName><label
  >Normalized Customer Name</label><type>Text</type><length
  >255</length><required>false</required></CustomField>