force-app/main/default/objects/Deal_Registration__c/fields/Normalized_Domain__c.field-meta.xml
<CustomField><fullName
  >Normalized_Domain__c</fullName><label>Normalized Domain</label><type
  >Text</type><length>255</length><required>false</required></CustomField>