force-app/main/default/objects/Deal_Registration__c/fields/Normalized_Phone__c.field-meta.xml
<CustomField><fullName
  >Normalized_Phone__c</fullName><label>Normalized Phone</label><type
  >Text</type><length>40</length><required>false</required></CustomField>