force-app/main/default/objects/Deal_Registration__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description
  >Additional notes, context, or review comments for the deal registration.</description>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>