force-app/main/default/objects/Deal_Registration__c/fields/Origin_Type__c.field-meta.xml
<CustomField>
    <fullName>Origin_Type__c</fullName>
    <description
  >Sprint 42 addition - distinguishes a deal created by ExpansionCommandService.createExpansionDeal() from an ordinary partner-submitted registration, so downstream logic (DealOpportunityReconciliationBatch's Closed Won revenue booking) can tell them apart without inferring it. Defaults to Registration so every pre-existing deal is classified correctly with no data fix-up needed.</description>
    <label>Origin Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Registration</fullName>
                <default>true</default>
                <label>Registration</label>
            </value>
            <value>
                <fullName>Expansion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>