force-app/main/default/objects/Deal_Registration__c/fields/Originating_Customer_Success__c.field-meta.xml
<CustomField>
    <fullName>Originating_Customer_Success__c</fullName>
    <description
  >Sprint 42 addition - for an Expansion-origin deal, the Customer_Success_Engagement__c the expansion was identified from. Null for an ordinary registration.</description>
    <label>Originating Customer Success Engagement</label>
    <type>Lookup</type>
    <referenceTo>Customer_Success_Engagement__c</referenceTo>
    <relationshipLabel>Expansion Deals</relationshipLabel>
    <relationshipName>Originated_Expansion_Deals</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>