force-app/main/default/objects/Deal_Registration__c/fields/Parent_Deal__c.field-meta.xml
<CustomField>
    <fullName>Parent_Deal__c</fullName>
    <description
  >Sprint 42 addition - for an Expansion-origin deal, the deal it expanded from. Null for an ordinary registration.</description>
    <label>Parent Deal</label>
    <type>Lookup</type>
    <referenceTo>Deal_Registration__c</referenceTo>
    <relationshipLabel>Expansion Deals</relationshipLabel>
    <relationshipName>Expansion_Deals</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>