force-app/main/default/objects/Deal_Registration__c/fields/Proposed_Solution__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Solution__c</fullName>
    <label>Proposed Solution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>