force-app/main/default/objects/Deal_Registration__c/fields/Protection_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Protection_End_Date__c</fullName>
    <description>End date for partner deal protection.</description>
    <label>Protection End Date</label>
    <type>Date</type>
</CustomField>