force-app/main/default/objects/Deal_Registration__c/fields/Protection_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Protection_Start_Date__c</fullName>
    <description>Start date for partner deal protection.</description>
    <label>Protection Start Date</label>
    <type>Date</type>
</CustomField>