force-app/main/default/objects/Deal_Registration__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Needs Information</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>