force-app/main/default/objects/Deal_Registration__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <description
  >Date and time when the deal registration was submitted.</description>
    <label>Submitted Date</label>
    <type>DateTime</type>
</CustomField>