force-app/main/default/objects/Deal_Registration__c/fields/Ultimate_Parent_Identity__c.field-meta.xml
<CustomField><fullName
  >Ultimate_Parent_Identity__c</fullName><label
  >Ultimate Parent Identity</label><type>Text</type><length>18</length><required
  >false</required></CustomField>