force-app/main/default/objects/Deal_Registration__c/fields/Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Version_Number__c</fullName><label>Version Number</label><type
  >Number</type><precision>10</precision><scale>0</scale><defaultValue
  >0</defaultValue><required>false</required>
</CustomField>