force-app/main/default/objects/Deal_Registration__c/validationRules/Require_Customer_Name_When_Submitted.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Customer_Name_When_Submitted</fullName>
    <active>true</active>
    <errorConditionFormula
  >AND(ISPICKVAL(Status__c, &quot;Submitted&quot;), ISBLANK(Customer_Name__c))</errorConditionFormula>
    <errorDisplayField>Customer_Name__c</errorDisplayField>
    <errorMessage>Customer Name is required before submitting.</errorMessage>
</ValidationRule>