force-app/main/default/objects/Deal_Registration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Object_Label__c</columns>
    <columns>API_Name__c</columns>
    <columns>Description__c</columns>
    <columns>Name_Field_Type__c</columns>
    <columns>Auto_Number_Format__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>